# Terminal_video

./: CMakeLists.txt  Makefile  main  main.cpp  player_config.cpp  player_config.hpp
